feat: implement Navbar and Banner components

--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "version": "0.1.0",
   "author": "Holoash",
   "dependencies": {
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
     "@fontsource/nunito": "^4.2.2",
     "@fontsource/open-sans": "^4.2.2",
     "classnames": "^2.2.6",
     "dotenv": "^8.2.0",
     "gatsby": "^3.0.1",
     "gatsby-cli": "^3.1.0",
+    "gatsby-image": "^3.1.0",
     "gatsby-plugin-gatsby-cloud": "^2.0.0",
     "gatsby-plugin-image": "^1.0.0",
     "gatsby-plugin-manifest": "^3.0.0",
